--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     font-size: 1rem;
 }
 
-.Container {
+/* .Container- {
     /* width: auto; */
     max-width: 1024px;
     /* min-width: 360px; */
@@ -32,7 +32,7 @@ body {
     margin: 0 auto;
     /* position: relative; */
     /* grid-template-areas: 'a a a' 'b b b' ' c c c' ' d j d' 'e e e' 'f f f' ' g g g' ' h h h ' 'i i i' */
-}
+} */
 
 .section-name {
     text-align: center;
