--- a/style.css
+++ b/style.css
@@ -69,7 +69,9 @@ outline: none; }
 }
 
 /*-----------------nav----------------------- */
+.navbar-nav{
 
+}
 nav {
     /* grid-row: 2/3; */
     /* grid-column: 1/4; */
@@ -115,11 +117,11 @@ nav > .logo{
     /* grid-column: 1/4; */
     background: green;
     /* height: auto; */
-    height: 450px;
+    /* height: auto; */
     /* min-height: 414px; */
-    /* height: 40%; */
-    background-image: url("../pics/hero-image.jpg");
-    background-position: bottom;
+    height: 100%;
+    background-image: url("Pics/hero-image.jpg");
+    background-position: center;
     /* background-position-y: -180px; */
     background-repeat: no-repeat;
     background-size: cover;
@@ -242,7 +244,7 @@ nav > .logo{
 /*--------------put yoga here!-------------------------*/
 
 .detail {
-    background-image: linear-gradient(rgba(70, 75, 77, 0.55), rgba(70, 75, 77, 0.55)), url("../pics/yoga.jpg");
+    background-image: linear-gradient(rgba(70, 75, 77, 0.55), rgba(70, 75, 77, 0.55)), url("Pics/yoga.jpg");
     background-position: center;
     background-size: cover;
 }
@@ -338,7 +340,7 @@ nav > .logo{
     width: auto;
     height: 90px;
     background: blue;
-    background-image: url("../pics/yoga.jpg");
+    background-image: url("Pics/yoga.jpg");
     background-position: center;
     background-size: cover;
     border-bottom: 2px solid #f19d20;
