--- a/style.css
+++ b/style.css
@@ -222,35 +222,36 @@ nav > .logo{
 
 .bg2 {
     background: #919797;
-    /* padding: 20px; */
+    padding-bottom: 100px;
 }
 
-.wrap2 {
+/* .wrap2 {
     padding: 100px 0;
     max-width: 650px;
     margin: 0 auto;
-}
+} */
 
 .wrap2 h4 {
     color: #fff;
 }
 
-.packages {
-    display: flex;
+/* .packages {
+    /* display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
-}
+    justify-content: space-between; */
+    max-width: 650px;
+} */
 
-.card {
+/* .card {
     width: 144px;
     height: 240px;
     background: #fff;
     margin: 5px;
     text-align: center;
     position: relative;
-}
+} */
 
-.card h4 {
+.card-title{
     font-size: 18px;
     font-weight: 400;
     padding: 0 8px;
@@ -259,7 +260,7 @@ nav > .logo{
     text-transform: uppercase;
 }
 
-.card p {
+.card-text{
     font-size: 11.5px;
     color: grey;
     padding: 0 5px;
@@ -267,30 +268,19 @@ nav > .logo{
     /* position: absolute; */
 }
 
-.card button {
+.btn-primary {
     /* box-sizing: border-box; */
-    padding: 8px 15px;
+    padding: 10px 25px;
     border-radius: 2rem;
     border: none;
     color: #fff;
     background-color: #f19d20;
     font-size: 0.6rem;
     text-transform: uppercase;
-    margin-top: 0;
-    position: absolute;
-    bottom: 6%;
-    right: 22%;
+    align-items: center;
+
 }
 
-.card-pic {
-    width: auto;
-    height: 90px;
-    background: blue;
-    background-image: url("https://eizads.github.io/Yoga-Studio/Pics/yoga.jpg");
-    background-position: center;
-    background-size: cover;
-    border-bottom: 2px solid #f19d20;
-}
 
 /*  -------------------new---------------------------*/
 
@@ -349,38 +339,18 @@ nav > .logo{
 
 
 /* -----------------------------extra images---------------- */
-.extra-images {
-    grid-row: 8/9;
-    grid-column: 1/4;
-    background: red;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 120px;
-    overflow: hidden;
-    align-items: center;
-
-}
-
- .extra-images{
-    /* width: 100%; */
-    /* background-image: linear-gradient(rgba(70, 75, 77, 0.55), rgba(70, 75, 77, 0.55)), url("wellness-test-page/images-used/yoga.jpg"); */
+.one{
+    background-image: url("https://eizads.github.io/Yoga-Studio/Pics/1.jpg");
     background-position: center;
-    background-position-y:-2.7rem;
-    /* background-size:  auto; */
-    /* width: 100px; */
-    grid-column: 1/2;
-    background-image: url("https://eizads.github.io/Yoga-Studio/wellness-test-page/images-used/10.jpg");
-    /* background-position: center; */
-    /* top: 10px; */
+    /* background-position-y: -180px; */
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: right;
+    display: flex;
+    justify-content: flex-end;
+    border-bottom: 3px solid #aebb2f;
+    margin-top: 0;
 }
-
-.extra-images-1{
-    display: none;
-}
-
-/* .extra-images > img:last-child{
-    align-self: start;
-} */
 /*----------------------footer-------------------*/
 
 .footer-wrapper {
