--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ body {
 
 /*--------------media query--------------*/
 @media (max-width: 576px) {
+	.hero-form {
+		justify-content: center;
+	}
+
 	.vis {
 		display: none;
 	}
@@ -42,11 +46,12 @@ body {
 	.detail {
 		padding: 0;
 	}
-    .card .btn-primary, .card .btn{
-        width: 200px;
-        padding: 15px;
-        align-self: center;
-    }
+
+	.card .btn-primary, .card .btn {
+		width: 200px;
+		padding: 15px;
+		align-self: center;
+	}
 }
 
 /*-----------------login----------------------- */
@@ -121,53 +126,60 @@ nav>.logo {
 	margin-top: 0;
 }
 
-.hero-form {
-	margin: 15vh 10vh;
-	height: auto;
-	width: 65vh;
+/* .hero-form {
+    /* display: flex; */
+/* justify-content:flex-end; */
+width: auto;
+flex-shrink: 1;
+/* width: 62vh; */
+/* flex-basis: auto; */
+/* max-width: 88%; */
 }
 
-.form {
-	/* padding: 10px 0; */
-	margin: 0 auto;
-	height: 25vh;
-	grid-template-columns: 1fr 1fr;
-	display: grid;
-	grid-gap: 2vh;
-	/* flex: 1 1 362px; */
-}
-
-.form input {
+/*.form {
+    /* display: flex; */
+/* height: 25vh; */
+grid-template-columns: 1fr 1fr;
+display: grid;
+grid-gap: 10px;
+width: auto;
+/* flex-shrink: 1;
+} */
+/*
+form input {
 	border-radius: 2rem;
 	/*  padding for text inside*/
-	padding: 12px 0 12px 15px;
-	border: 0;
-	text-transform: capitalize;
-	text-align: left;
-	color: #7f7f7f;
+padding: 12px 0 12px 15px;
+border: 0;
+text-transform: capitalize;
+text-align: left;
+color: #7f7f7f;
 }
 
-.form input:nth-child(n+3) {
+/* .form input:nth-child(n+3) {
 	grid-column: 1/3;
+} */
+/*form .btn .btn-primary {
+	/* grid-column: 1/3; */
+padding: 14px 50px;
+border-radius: 2rem;
+border: none;
+/* color: #fff; */
+background-color: #f19d20;
+font-size: 0.8rem;
+text-transform: uppercase;
+margin-top: 0;
+width: 100%;
+color: #fff;
 }
-
-.form button {
-	grid-column: 1/3;
-	padding: 14px 50px;
-	border-radius: 2rem;
-	border: none;
-	/* color: #fff; */
-	background-color: #f19d20;
-	font-size: 0.8rem;
-	text-transform: uppercase;
-	margin-top: 0;
-	width: 100%;
-	color: #fff;
+form .btn .btn-primary{
+    width: 100%;
 }
-
-.form button:hover {
+form .btn:hover, .btn-primary:hover {
 	background-color: #aebb2f;
 }
+
+*/
 
 /*  -------------------sections---------------------------*/
 .wrap {
@@ -283,8 +295,7 @@ nav>.logo {
 	background-color: #f19d20;
 	font-size: 0.8em;
 	text-transform: uppercase;
-    max-width: 140px;
-
+	/* max-width: 140px; */
 }
 
 /* .btn{
@@ -292,8 +303,8 @@ nav>.logo {
     margin-left: 10vh;
     margin-right: 10vh;
 } */
-.btn:hover{
-    background-color: #aebb2f;
+.btn:hover {
+	background-color: #aebb2f;
 }
 
 /*  -------------------new---------------------------*/
@@ -356,7 +367,7 @@ nav>.logo {
 } */
 .footer-wrapper {
 	background: grey;
-    padding: 50px;
+	padding: 50px;
 	/* padding: 35px 30px 60px 30px; */
 	color: #fff;
 }
