--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 	margin: 0;
 	background: lightgrey;
 	font-family: 'roboto regular', sans-serif;
-	font-size: 1rem;
+	font-size: 16px;
 }
 
 .section-name {
@@ -52,6 +52,13 @@ body {
 		padding: 15px;
 		align-self: center;
 	}
+
+	.about-logo{
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
 }
 
 /*-----------------login----------------------- */
@@ -125,61 +132,6 @@ nav>.logo {
 	border-bottom: 3px solid #aebb2f;
 	margin-top: 0;
 }
-
-/* .hero-form {
-    /* display: flex; */
-/* justify-content:flex-end; */
-width: auto;
-flex-shrink: 1;
-/* width: 62vh; */
-/* flex-basis: auto; */
-/* max-width: 88%; */
-}
-
-/*.form {
-    /* display: flex; */
-/* height: 25vh; */
-grid-template-columns: 1fr 1fr;
-display: grid;
-grid-gap: 10px;
-width: auto;
-/* flex-shrink: 1;
-} */
-/*
-form input {
-	border-radius: 2rem;
-	/*  padding for text inside*/
-padding: 12px 0 12px 15px;
-border: 0;
-text-transform: capitalize;
-text-align: left;
-color: #7f7f7f;
-}
-
-/* .form input:nth-child(n+3) {
-	grid-column: 1/3;
-} */
-/*form .btn .btn-primary {
-	/* grid-column: 1/3; */
-padding: 14px 50px;
-border-radius: 2rem;
-border: none;
-/* color: #fff; */
-background-color: #f19d20;
-font-size: 0.8rem;
-text-transform: uppercase;
-margin-top: 0;
-width: 100%;
-color: #fff;
-}
-form .btn .btn-primary{
-    width: 100%;
-}
-form .btn:hover, .btn-primary:hover {
-	background-color: #aebb2f;
-}
-
-*/
 
 /*  -------------------sections---------------------------*/
 .wrap {
@@ -298,11 +250,6 @@ form .btn:hover, .btn-primary:hover {
 	/* max-width: 140px; */
 }
 
-/* .btn{
-    background-color: #f19d20;
-    margin-left: 10vh;
-    margin-right: 10vh;
-} */
 .btn:hover {
 	background-color: #aebb2f;
 }
@@ -311,7 +258,9 @@ form .btn:hover, .btn-primary:hover {
 /*  -------------------------about----------------------*/
 .wrap-about {
 	background: #fff;
-	/* width: 600px; */
+	display: flex;
+	justify-content: center;
+	/* max-width: 600px; */
 	/* margin: 0 auto; */
 	padding: 40px;
 	border-bottom: : 1px solid lightgrey;
@@ -323,15 +272,13 @@ form .btn:hover, .btn-primary:hover {
 	padding: 40px;
 	border-radius: 5px;
 	max-width: 600px;
-	margin: 0 auto;
+	/* margin: 0 auto; */
 }
 
-.about h4 {
-	margin: 0;
+.about-logo .header{
 	font-size: 1.5rem;
 	font-weight: lighter;
 	text-transform: uppercase;
-	/* display: inline; */
 }
 
 .about p {
@@ -344,9 +291,8 @@ form .btn:hover, .btn-primary:hover {
 }
 
 .about-logo svg {
-	width: 145px;
+	/* width: 145px; */
 	padding-left: 7px;
-	padding-top: 3px;
 }
 
 /* ----------------------mail---------------------- */
